Fix #34: Remove CommonsUploadFile from reflection